feat(eda): integrate removal and legal collection domain events, openapi endpoints and multichannel notifications
